--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "final-movie-analysis"
 version = "0.1.0"
-description = "Add your description here"
+description = "A package that scrapes movie data from Universal Studios and analyzes it."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -14,3 +14,8 @@ dependencies = [
     "requests>=2.32.5",
     "seaborn>=0.13.2",
 ]
+
+[project.urls]
+Homepage = "https://github.com/CNelson2004/Final_Movie_Analysis"
+Repository = "https://github.com/CNelson2004/Final_Movie_Analysis.git"
+Issues = "https://github.com/CNelson2004/Final_Movie_Analysis/issues"
