--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
+[build-system]
+requires = ["uv_build >= 0.9.5, <0.10.0"]
+build-backend = "uv_build"
 [project]
 name = "final-movie-analysis"
 version = "0.1.0"
 description = "A package that scrapes movie data from Universal Studios and analyzes it."
 readme = "README.md"
 requires-python = ">=3.12"
+license = { text = "MIT" }
+classifiers = [
+"Programming Language :: Python :: 3",
+"Operating System :: OS Independent"
+]
 dependencies = [
     "bs4>=0.0.2",
     "ipykernel>=7.1.0",
