--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "requests>=2.32.5",
+    "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
+    "shap>=0.49.1",
     "twine>=6.2.0",
 ]
 
