--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ dependencies = [
     "pandas>=2.3.3",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
-    "seaborn>=0.13.2",
     "shap>=0.49.1",
+    "streamlit>=1.52.1",
     "twine>=6.2.0",
 ]
 
