--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,11 @@ dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "pingouin>=0.5.5",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
+    "scipy>=1.16.3",
     "shap>=0.49.1",
-    "streamlit>=1.52.1",
     "twine>=6.2.0",
 ]
 
