--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@
           text: Documentation
         - href: tutorial.qmd
           text: Getting Started
+        - href: technical_report.qmd
+          text: Technical report
   
   format:
     html:
